--- a/composer.json
+++ b/composer.json
@@ -1,7 +1,8 @@
 {
     "name": "fize/doc",
     "description": "PHP文档生成工具。",
-    "license": "Apache-2.0",
+    "type": "library",
+    "license": "MIT",
     "authors": [
         {
             "name": "FizeChan",
@@ -12,7 +13,8 @@
         "php": ">=7.1.0",
         "ext-json": "*",
         "phpdocumentor/reflection-docblock": "5.0.*@alpha",
-        "fize/misc": "*"
+        "fize/misc": "*",
+        "fize/io": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0.0"
@@ -21,5 +23,8 @@
         "psr-4": {
             "fize\\doc\\": "src"
         }
-    }
+    },
+    "bin": [
+        "fizedoc"
+    ]
 }
