--- a/composer.json
+++ b/composer.json
@@ -13,8 +13,8 @@
         "php": ">=7.1.0",
         "ext-json": "*",
         "phpdocumentor/reflection-docblock": "5.0.*@alpha",
-        "fize/misc": "*",
-        "fize/io": "*"
+        "fize/misc": "~0.1",
+        "fize/io": "~3.3"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.0.0"
