--- a/composer.json
+++ b/composer.json
@@ -12,12 +12,12 @@
   "require": {
     "php": ">=7.1.0",
     "ext-json": "*",
-    "phpdocumentor/reflection-docblock": "5.0.*@alpha",
-    "fize/misc": "~0.1",
-    "fize/io": "~3.5"
+    "phpdocumentor/reflection-docblock": "~5.1.0",
+    "fize/io": "~3.7.0",
+    "fize/misc": "~0.1.0"
   },
   "require-dev": {
-    "phpunit/phpunit": "^8.0.0"
+    "phpunit/phpunit": "~9.1.0"
   },
   "autoload": {
     "psr-4": {
