--- a/composer.json
+++ b/composer.json
@@ -9,20 +9,20 @@
       "email": "chenfengzhan@qq.com"
     }
   ],
-  "require": {
-    "php": ">=7.1.0",
-    "ext-json": "*",
-    "phpdocumentor/reflection-docblock": "~5.1.0",
-    "fize/io": "~3.7.0",
-    "fize/misc": "~0.1.0"
-  },
-  "require-dev": {
-    "phpunit/phpunit": "~9.1.0"
-  },
   "autoload": {
     "psr-4": {
       "fize\\doc\\": "src"
     }
+  },
+  "require": {
+    "php": ">=7.1.0",
+    "ext-json": "*",
+    "phpdocumentor/reflection-docblock": "^5.2.2",
+    "fize/io": "^4.1.1",
+    "fize/misc": "^0.1.0"
+  },
+  "require-dev": {
+    "phpunit/phpunit": "^9.5.0"
   },
   "bin": [
     "fizedoc"
