--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,8 @@
   "require": {
     "php": ">=7.1.0",
     "ext-json": "*",
-    "phpdocumentor/reflection-docblock": "^5.2.2",
-    "fize/io": "^4.1.1",
-    "fize/misc": "^0.1.0"
+    "fize/io": "^5.0.0",
+    "phpdocumentor/reflection-docblock": "^5.2.2"
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.0"
