--- a/composer.json
+++ b/composer.json
@@ -11,14 +11,19 @@
   ],
   "autoload": {
     "psr-4": {
-      "fize\\doc\\": "src"
+      "Fize\\Doc\\": "src"
     }
   },
   "require": {
     "php": ">=7.1.0",
     "ext-json": "*",
-    "fize/io": "^5.0.0",
+    "fize/io": "^6.0.0",
     "phpdocumentor/reflection-docblock": "^5.2.2"
+  },
+  "autoload-dev": {
+    "psr-4": {
+      "Tests\\": "tests"
+    }
   },
   "require-dev": {
     "phpunit/phpunit": "^9.5.0"
